syntax = "proto3";

option java_multiple_files = true;
option java_package = "futurebattlegroundsRPC";
option java_outer_classname = "FutureBattlegroundsProto";
option objc_class_prefix = "FB";

package futurebattlegroundsRPC;

service Battlegrounds {
    rpc getState (Empty) returns (StateReply) {}
    rpc streamState (Empty) returns (stream StateReply) {}

    rpc spawnShip (ShipSpawnRequest) returns (ShipSpawnReply) {}
    rpc thrust (ThrustRequest) returns (CommandResponse) {}
    rpc rotate (RotateRequest) returns (CommandResponse) {}
    rpc keepalive (Empty) returns (CommandResponse) {}
}

enum CommandStatus {
    OK = 0;
    ERROR = 1;
}

message ShipSpawnRequest {
    string iff = 1;
}

message ShipSpawnReply {
    string uuid = 1;
}

message CommandResponse {
    CommandStatus resultCode = 1;
}

message ThrustRequest {
    string uuid = 1;
    TimeOptions timeOptions = 2;
}

message RotateRequest {
    string uuid = 1;
    TimeOptions timeOptions = 2;
    int32 direction = 3;
}

message TimeOptions {
    double activationTime = 1;
    double durationTime = 2;
}

message Empty {}

message Position {
    double x = 1;
    double y = 2;
}

message Ship {
    Position position = 1;
}

message StateReply {
  repeated Ship ships = 1;
}